--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,16 @@
     </head>
 
     <body>
-        <p>Welcome to the chat app</p>
+        <p>The Chat</p>
 
-        <ol id="messages"></ol>
+        <ol id="messages" style="height: 20em; width: 25%; overflow: hidden; overflow-y: scroll"></ol>
 
         <form id="message-form">
             <input name="message" type="text" placeholder="Message"/>
             <button>Send</button>
         </form>
-        
+        <button id="send-location">Send location</button>
+
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/libs/jquery-3.3.1.min.js"></script>
         <script src="/js/index.js"></script>
