--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,27 @@
 <html>
     <head>
         <meta charset="utf8">
+        <link rel="stylesheet" href="/css/styles.css">
     </head>
 
-    <body>
-        <p>The Chat</p>
+    <body class="chat">
 
-        <ol id="messages" style="height: 20em; width: 25%; overflow: hidden; overflow-y: scroll"></ol>
+        <div class="chat__sidebar">
+            <h3>Badass Brothers</h3>
+            <div id="users"></div>
+        </div>
 
-        <form id="message-form">
-            <input name="message" type="text" placeholder="Message"/>
-            <button>Send</button>
-        </form>
-        <button id="send-location">Send location</button>
+        <div class="chat__main">
+            <ol id="messages" class="chat__messages"></ol>
+
+            <div class="chat__footer">
+                <form id="message-form">
+                        <input name="message" type="text" placeholder="Message" autofocus autocomplete="off"/>
+                        <button>Send</button>
+                </form>
+                <button id="send-location">Send location</button>
+            </div>
+        </div>
 
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/libs/jquery-3.3.1.min.js"></script>
